[style] 코드 정리 (#452)
* feat: Portfolio의 LocalDate 모킹

* feat: StockDividend 필드에 isDeleted 컬럼 추가

* feat: DividendDates 임베디드 클래스 추가

* feat: StockDividendParser 추가

* feat: 생성자 압축

* refactor: 객체지향적으로 변경

* refactor: Stock 필드에 LocalDateTimeService 추가

* refactor: StockParser 추가 및 분리

* style: 코드 정리

* fix: HashTable 변경

* style: equals 재정의

* refactor: 불필요한 메서드 인수 제거

* Refactor: file.delete 개선

* style: 코드 정리

* style: sonarLint에 따른 코드 정리

* fix: 테스트 실패 해결

* style:: 코드 정리

* test: 테스트 해결

* style: 코드 정리

* [feat] 배당금 엔티티에 필드 추가 및 포트폴리오 필드 추가 (#451)

* feat: Portfolio의 LocalDate 모킹

* feat: StockDividend 필드에 isDeleted 컬럼 추가